--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,8 @@
 
 
 <body>
-ここは神聖なお部屋です！！！！！
-今日はえっちしてません
-つぎがたのしみ
-おっぱい好きだな～
-うへへ
-ははは
-ははは
-次はいつ会えますか
-いちごおいしかった
+League Of Legends 楽しいです
+Supメインですが、Adcも練習したいです
+好きなチャンプは Sorakaです
 </body>
 
