--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,11 @@
 
 
 <body>
-	<h1>好きなものについて</h1>
+<h1>>あひるちゃんとは</h1>>
+	<h2>好きなものについて</h2>
 League Of Legends 楽しいです
 Supメインですが、Adcも練習したいです
 好きなチャンプは Sorakaです
-	<h2>あひるちゃんとは</head>
+</head>
 </body>
 
