--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,11 @@
 <h1>あひるちゃんとは</h1>
 大学三年生で神奈川県に住んでいますMAXBAKAです。
 	<h2>好きなものについて</h2>
-League Of Legends 楽しいです
-Supメインですが、Adcも練習したいです
+	League Of Legends 楽しいです
+	Supメインですが、Adcも練習したいです
 好きなチャンプは Sorakaです
+<h2>Twitter</h2>
+@ahiru_rov<a herf"https://twitter.com/ahiru_rov?lang=ja"></a>
 </head>
 </body>
 
