--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 	Supメインですが、Adcも練習したいです
 好きなチャンプは Sorakaです
 <h2>Twitter</h2>
-@ahiru_rov<a href="https://twitter.com/ahiru_rov?lang=ja"></a>
+@ahiru_rov<a href="https://twitter.com/ahiru_rov?lang=ja">twitterのリンク</a>
 </head>
 </body>
 
