--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1>あひるちゃんとは</h1>
 大学三年生で神奈川県に住んでいますMAXBAKAです。
-<img src="S__27672656.ping" alt="とある日のあひるちゃん">
+<img src="S__27672656.png" alt="とある日のあひるちゃん">
 	<h2>好きなものについて</h2>
 	League Of Legends 楽しいです
 	Supメインですが、Adcも練習したいです
