--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
 好きなチャンプは Sorakaです
 <h2>Twitter</h2>
 @ahiru_rov　<a href="https://twitter.com/ahiru_rov?lang=ja">twitterのリンク</a>
+<h2>twitch</h2>
+<a href="https://www.twitch.tv/0ahiru0">twitchのリンク</a>
 </head>
 </body>
 
