--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
 好きなチャンプは Sorakaです
 <h2>Twitter</h2>
 @ahiru_rov　<a href="https://twitter.com/ahiru_rov?lang=ja">twitterのリンク</a>
+<iframe> width="560" height="315" src="https://twitter.com/ahiru_rov/status/1110328192689037312?s=20" frameborder="0"
+	allowfullscreen></iframe>
 <h2>twitch</h2>
 <a href="https://www.twitch.tv/0ahiru0">twitchのリンク</a>
 </head>
