--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,10 @@
 	Supメインですが、Adcも練習したいです
 好きなチャンプは Sorakaです
 <h2>Twitter</h2>
-@ahiru_rov　<a href="https://twitter.com/ahiru_rov?lang=ja">twitterのリンク</a>
-<iframe> width="560" height="315" src="https://www.youtube.com/watch?v=V-cSLP-J4JQ" frameborder="0"
-		alt="おすすめ動画"allowfullscreen></iframe>
+	@ahiru_rov　<a href="https://twitter.com/ahiru_rov?lang=ja">twitterのリンク</a>
+	<a class="twitter-timeline" href="https://twitter.com/ahiru_rov?ref_src=twsrc%5Etfw">Tweets by ahiru_rov</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <h2>twitch</h2>
-<a href="https://www.twitch.tv/0ahiru0">twitchのリンク</a>
+	<a href="https://www.twitch.tv/0ahiru0">twitchのリンク</a>
 </head>
 </body>
 
