--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 好きなチャンプは Sorakaです
 <h2>Twitter</h2>
 	@ahiru_rov　<a href="https://twitter.com/ahiru_rov?lang=ja">twitterのリンク</a>
-	<a class="twitter-timeline" href="https://twitter.com/ahiru_rov?ref_src=twsrc%5Etfw">Tweets by ahiru_rov</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+	<a class="twitter-timeline" data-width="300" data-height="500" data-link-color="#E81C4F" href="https://twitter.com/ahiru_rov?ref_src=twsrc%5Etfw">Tweets by ahiru_rov</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <h2>twitch</h2>
 	<a href="https://www.twitch.tv/0ahiru0">twitchのリンク</a>
 </head>
